# KV_analysis

./: .gitignore  README.md  claims_assessment.md  compute_rho.py  exp2_report.md  experiment2.py  experiment3.py  plot_depth_decomposition.py  plot_experiment1.py  plot_experiment2.py  plot_rho_per_layer.py  print_table1.py  pyproject.toml  res1_report.md  theorem2_extension.tex
results/: exp2_opt-125m_results.npz  exp2_opt-350m_results.npz  exp2_results.npz  exp3_opt-125m_results.npz  exp3_opt-350m_results.npz  rho_results.npz
results/exp3/: opt-125m_tied_full_ft_curve.npz  opt-350m_tied_full_ft_curve.npz
