[project]
name = "kv-proof"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "numpy>=1.24.0,<2.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.66.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
